cambios .NET Azure

--- a/ProjectManager.Api.User/appsettings.json
+++ b/ProjectManager.Api.User/appsettings.json
@@ -1,6 +1,11 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=ProjectManagerUsers;User Id=sa;Password=2001b;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=server-projects-pma.database.windows.net;Database=ProjectManagerUsers;User Id=bradley;Password=2001BradFer*7;TrustServerCertificate=True;"
+    },
+    "JwtSettings": {
+        "SecretKey": "secure-key-projectmanagersecretkey123",
+        "Issuer": "ProjectManagerAPI",
+        "Audience": "*"
     },
     "Cloudinary": {
         "CloudName": "ddafrj6z7",
