--- a/ProjectManager.Api.User/appsettings.json
+++ b/ProjectManager.Api.User/appsettings.json
@@ -1,18 +1,15 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=server-projects-pma.database.windows.net;Database=ProjectManagerUsers;User Id=bradley;Password=2001BradFer*7;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost;Database=ProjectManagerUsers;User Id=sa;Password=2001b;TrustServerCertificate=True;"
     },
     "JwtSettings": {
         "SecretKey": "secure-key-projectmanagersecretkey123",
         "Issuer": "ProjectManagerAPI",
         "Audience": "*"
     },
-    "Cloudinary": {
-        "CloudName": "ddafrj6z7",
-        "ApiKey": "986386623115898",
-        "ApiSecret": "lgXYQNlYhTTIXUesGiF_AwAEehg"
+    "Imgbb": {
+        "ApiKey": "d973d33f597e2cc71b91d83dff17c665"
     },
-
     "Logging": {
         "LogLevel": {
             "Default": "Information",
