--- a/ProjectManager.Api.User/ProjectManager.Api.User.csproj
+++ b/ProjectManager.Api.User/ProjectManager.Api.User.csproj
@@ -24,4 +24,10 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
